--- a/source/src/scss/styles.scss
+++ b/source/src/scss/styles.scss
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'dymht';
-  src: url('../assets/DouyinSansBold.ttf');
-}
-
-span {
-  color: red;
-}
+@import 'base';
+@import 'pages/home';
+@import 'components/socialLink';
