--- a/App/src/lib/styles/_variables.scss
+++ b/App/src/lib/styles/_variables.scss
@@ -1,2 +1,15 @@
-$theme-color: #95d146;
+$primary-color: #9165cf;
 $theme-color-darken: #79aa39;
+
+$background: #dbd8dd;
+
+$text: #404040;
+$text-snippet: #808080;
+
+$image-background: #f0f0f0;
+
+$card: #ffffff;
+$card-hover: #fcf6ff;
+$card-border: #d0d0d0;
+
+$navigation-hover: #bd93f8;
