--- a/App/src/lib/styles/markdown/github-markdown-light.scss
+++ b/App/src/lib/styles/markdown/github-markdown-light.scss
@@ -51,7 +51,7 @@
 
 .markdown-body a {
 	background-color: transparent;
-	color: #0969da;
+	color: #68b258;
 	text-decoration: none;
 }
 
@@ -75,7 +75,6 @@
 	font-weight: 600;
 	padding-bottom: 0.3em;
 	font-size: 2em;
-	border-bottom: 1px solid #d0d7deb3;
 }
 
 .markdown-body mark {
@@ -224,7 +223,7 @@
 .markdown-body [role='button']:focus,
 .markdown-body input[type='radio']:focus,
 .markdown-body input[type='checkbox']:focus {
-	outline: 2px solid #0969da;
+	outline: 2px solid #68b258;
 	outline-offset: -2px;
 	box-shadow: none;
 }
@@ -240,7 +239,7 @@
 .markdown-body [role='button']:focus-visible,
 .markdown-body input[type='radio']:focus-visible,
 .markdown-body input[type='checkbox']:focus-visible {
-	outline: 2px solid #0969da;
+	outline: 2px solid #68b258;
 	outline-offset: -2px;
 	box-shadow: none;
 }
@@ -291,7 +290,6 @@
 	font-weight: 600;
 	padding-bottom: 0.3em;
 	font-size: 1.5em;
-	border-bottom: 1px solid #d0d7deb3;
 }
 
 .markdown-body h3 {
@@ -849,7 +847,7 @@
 	left: -24px;
 	pointer-events: none;
 	content: '';
-	border: 2px solid #0969da;
+	border: 2px solid #68b258;
 	border-radius: 6px;
 }
 
@@ -1080,11 +1078,11 @@
 }
 
 .markdown-body .markdown-alert.markdown-alert-note {
-	border-left-color: #0969da;
+	border-left-color: #68b258;
 }
 
 .markdown-body .markdown-alert.markdown-alert-note .markdown-alert-title {
-	color: #0969da;
+	color: #68b258;
 }
 
 .markdown-body .markdown-alert.markdown-alert-important {
