--- a/App/src/lib/styles/_variables.scss
+++ b/App/src/lib/styles/_variables.scss
@@ -1,7 +1,6 @@
-$primary-color: #9165cf;
-$theme-color-darken: #79aa39;
+$primary-color: #6d6d6d;
 
-$background: #dbd8dd;
+$background: #e6e6e6;
 
 $text: #404040;
 $text-snippet: #808080;
@@ -9,7 +8,9 @@ $text-snippet: #808080;
 $image-background: #f0f0f0;
 
 $card: #ffffff;
-$card-hover: #fcf6ff;
+$card-hover: #f0f0f0;
 $card-border: #d0d0d0;
 
-$navigation-hover: #bd93f8;
+$navigation-hover: #c0c0c0;
+
+$card-raiuds: .25rem;
