--- a/App/src/lib/styles/_variables.scss
+++ b/App/src/lib/styles/_variables.scss
@@ -1,16 +1,13 @@
+/* Color */
 $primary-color: #6d6d6d;
-
 $background: #e6e6e6;
-
 $text: #404040;
 $text-snippet: #808080;
-
 $image-background: #f0f0f0;
-
 $card: #ffffff;
 $card-hover: #f0f0f0;
 $card-border: #d0d0d0;
-
 $navigation-hover: #c0c0c0;
 
-$card-raiuds: .25rem;
+/* Value */
+$card-raiuds: .5rem;
