--- a/App/src/lib/styles/_base.scss
+++ b/App/src/lib/styles/_base.scss
@@ -21,17 +21,18 @@ html {
 	}
 }
 
-html, body {
+html,
+body {
 	position: relative;
-  height: 100%;
-  background: vr.$background;
-  scroll-behavior: smooth;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+	height: 100%;
+	background: vr.$background;
+	scroll-behavior: smooth;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 
-  &::-webkit-scrollbar {
-    display: none;
-  }
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 .root {
@@ -41,14 +42,19 @@ html, body {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	min-height: 100vh;	
+	min-height: 100vh;
 }
 
 a {
 	text-decoration: none;
-	&:hover, &:active, &:visited { color: inherit; }
+	&:hover,
+	&:active,
+	&:visited {
+		color: inherit;
+	}
 }
 
-ul, ul {
+ul,
+ul {
 	list-style: none;
 }
