--- a/App/src/lib/styles/_variables.scss
+++ b/App/src/lib/styles/_variables.scss
@@ -1,13 +1,13 @@
 /* Color */
-$primary-color: #6d6d6d;
-$background: #e6e6e6;
-$text: #404040;
+$primary-color: #60b55d;
+$background: #141414;
+$text: #dadada;
 $text-snippet: #808080;
 $image-background: #f0f0f0;
-$card: #ffffff;
-$card-hover: #f0f0f0;
-$card-border: #d0d0d0;
-$navigation-hover: #c0c0c0;
+$card: #2a2a2a;
+$card-hover: #3a3a3a;
+$card-border: transparent;
+$navigation-hover: rgb(72, 141, 70);
 
 /* Value */
-$card-raiuds: 0.5rem;
+$card-radius: .25rem;
