--- a/App/src/lib/styles/_variables.scss
+++ b/App/src/lib/styles/_variables.scss
@@ -3,7 +3,7 @@ $primary-color: #60b55d;
 $background: #141414;
 $text: #dadada;
 $text-snippet: #808080;
-$image-background: #f0f0f0;
+$image-background: #1c1c1c;
 $card: #2a2a2a;
 $card-hover: #3a3a3a;
 $card-border: transparent;
