feat: low-poly animation

--- a/src/lib/styles/_base.scss
+++ b/src/lib/styles/_base.scss
@@ -7,12 +7,12 @@
 }
 
 :root {
-  font-size: 16px;
-
+  @include md.respond-to('large') {
+    font-size: 16px;
+  }
   @include md.respond-to('medium') {
     font-size: 14px;
   }
-
   @include md.respond-to('small') {
     font-size: 12px;
   }
