--- a/src/lib/styles/_variables.scss
+++ b/src/lib/styles/_variables.scss
@@ -5,16 +5,14 @@ $text: #fff;
 $text-color: #e0e0e0;
 $text-darken-color: #707070;
 
-
-$card: #3A3937;
-$card-hover: #4A4848;
+$card: #3a3937;
+$card-hover: #4a4848;
 $card-border: transparent;
 
 /* VALUE */
 $header-height: 4.5rem;
 $max-width: 80rem;
 $card-radius: 0.25rem;
-
 
 /* PAINT */
 $pen: #7b7575;
@@ -30,31 +28,32 @@ $navigation-hover: rgb(72, 141, 70);
 /* Z-INDEX */
 
 /* LOW-POLY */
-$hole: (
-    // ( x, y, width, height, color, polygon()),
-    ( 0em, 0em, 21em, 142em, #E91111, polygon(0 0, 100.00% 69.01%, 0 100.00%) ),
-    ( 0em, 98em, 36em, 48em, #4C4C4C, polygon(58.33% 0, 100.00% 100.00%, 0 91.67%) ),
-    ( 0em, 142em, 40em, 51em, #2E2E2E, polygon(0 0, 90.00% 7.84%, 100.00% 100.00%) ),
-    ( 0em, 142em, 40em, 76em, #181818, polygon(0 0, 100.00% 67.11%, 50.00% 100.00%) ),
-    ( 36em, 146em, 23em, 47em, #676767, polygon(0 0, 100.00% 57.45%, 17.39% 100.00%) ),
-    ( 40em, 173em, 29em, 29em, #3D3D3D, polygon(65.52% 0, 100.00% 100.00%, 0 68.97%) ),
-    ( 40em, 193em, 29em, 40em, #676767, polygon(0 0, 100.00% 22.50%, 86.21% 100.00%) ),
-    ( 20em, 193em, 45em, 40em, #4C4C4C, polygon(44.44% 0, 100.00% 100.00%, 0 62.50%) ),
-    ( 229em, 0em, 21em, 142em, #E91111, polygon(100.00% 0, 100.00% 100.00%, 0 69.01%) ),
-    ( 214em, 98em, 36em, 48em, #4C4C4C, polygon(41.67% 0, 100.00% 91.67%, 0 100.00%) ),
-    ( 210em, 142em, 40em, 51em, #2E2E2E, polygon(10.00% 7.84%, 100.00% 0, 0 100.00%) ),
-    ( 210em, 142em, 40em, 76em, #181818, polygon(100.00% 0, 50.00% 100.00%, 0 67.11%) ),
-    ( 191em, 146em, 23em, 47em, #676767, polygon(100.00% 0, 82.61% 100.00%, 0 57.45%) ),
-    ( 181em, 173em, 29em, 29em, #3D3D3D, polygon(34.48% 0, 100.00% 68.97%, 0 100.00%) ),
-    ( 181em, 193em, 29em, 40em, #676767, polygon(100.00% 0, 13.79% 100.00%, 0 22.50%) ),
-    ( 185em, 193em, 45em, 40em, #4C4C4C, polygon(55.56% 0, 100.00% 62.50%, 0 100.00%) ),
-    ( 59em, 173em, 66em, 29em, #676767, polygon(0 0, 100.00% 55.17%, 15.15% 100.00%) ),
-    ( 65em, 189em, 60em, 44em, #2E2E2E, polygon(100.00% 0, 0 100.00%, 6.67% 29.55%) ),
-    ( 65em, 189em, 60em, 89em, #676767, polygon(100.00% 0, 100.00% 76.40%, 0 49.44%) ),
-    ( 65em, 233em, 60em, 47em, #4C4C4C, polygon(0 0, 100.00% 51.06%, 51.67% 100.00%) ),
-    ( 96em, 257em, 58em, 23em, #696969, polygon(50.00% 0, 100.00% 100.00%, 0 100.00%) ),
-    ( 125em, 233em, 60em, 47em, #2D2D2D, polygon(100.00% 0, 48.33% 100.00%, 0 51.06%) ),
-    ( 125em, 189em, 60em, 68em, #4C4C4C, polygon(0 0, 100.00% 64.71%, 0 100.00%) ),
-    ( 125em, 189em, 60em, 44em, #181818, polygon(0 0, 93.33% 29.55%, 100.00% 100.00%) ),
-    ( 125em, 173em, 66em, 29em, #676767, polygon(100.00% 0, 84.85% 100.00%, 0 55.17%) ),
+// 我需要一个变量来更合理的控制 low-poly 图形的大小 :P
+$horn: (
+	// ( x, y, width, height, color, polygon()),
+	(0em, 0em, 21em, 142em, #e91111, polygon(0 0, 100% 69.01%, 0 100%)),
+	(0em, 98em, 36em, 48em, #4c4c4c, polygon(58.33% 0, 100% 100%, 0 91.67%)),
+	(0em, 142em, 40em, 51em, #2e2e2e, polygon(0 0, 90% 7.84%, 100% 100%)),
+	(0em, 142em, 40em, 76em, #181818, polygon(0 0, 100% 67.11%, 50% 100%)),
+	(36em, 146em, 23em, 47em, #676767, polygon(0 0, 100% 57.45%, 17.39% 100%)),
+	(40em, 173em, 29em, 29em, #3d3d3d, polygon(65.52% 0, 100% 100%, 0 68.97%)),
+	(40em, 193em, 29em, 40em, #676767, polygon(0 0, 100% 22.5%, 86.21% 100%)),
+	(20em, 193em, 45em, 40em, #4c4c4c, polygon(44.44% 0, 100% 100%, 0 62.5%)),
+	(229em, 0em, 21em, 142em, #e91111, polygon(100% 0, 100% 100%, 0 69.01%)),
+	(214em, 98em, 36em, 48em, #4c4c4c, polygon(41.67% 0, 100% 91.67%, 0 100%)),
+	(210em, 142em, 40em, 51em, #2e2e2e, polygon(10% 7.84%, 100% 0, 0 100%)),
+	(210em, 142em, 40em, 76em, #181818, polygon(100% 0, 50% 100%, 0 67.11%)),
+	(191em, 146em, 23em, 47em, #676767, polygon(100% 0, 82.61% 100%, 0 57.45%)),
+	(181em, 173em, 29em, 29em, #3d3d3d, polygon(34.48% 0, 100% 68.97%, 0 100%)),
+	(181em, 193em, 29em, 40em, #676767, polygon(100% 0, 13.79% 100%, 0 22.5%)),
+	(185em, 193em, 45em, 40em, #4c4c4c, polygon(55.56% 0, 100% 62.5%, 0 100%)),
+	(59em, 173em, 66em, 29em, #676767, polygon(0 0, 100% 55.17%, 15.15% 100%)),
+	(65em, 189em, 60em, 44em, #2e2e2e, polygon(100% 0, 0 100%, 6.67% 29.55%)),
+	(65em, 189em, 60em, 89em, #676767, polygon(100% 0, 100% 76.4%, 0 49.44%)),
+	(65em, 233em, 60em, 47em, #4c4c4c, polygon(0 0, 100% 51.06%, 51.67% 100%)),
+	(96em, 257em, 58em, 23em, #696969, polygon(50% 0, 100% 100%, 0 100%)),
+	(125em, 233em, 60em, 47em, #2d2d2d, polygon(100% 0, 48.33% 100%, 0 51.06%)),
+	(125em, 189em, 60em, 68em, #4c4c4c, polygon(0 0, 100% 64.71%, 0 100%)),
+	(125em, 189em, 60em, 44em, #181818, polygon(0 0, 93.33% 29.55%, 100% 100%)),
+	(125em, 173em, 66em, 29em, #676767, polygon(100% 0, 84.85% 100%, 0 55.17%))
 );
